fix: adicionado configuracoes do projeto react vite mantine daisyui
fix: adicionado configuracoes do projeto react vite mantine daisyui

--- a/src/package.json
+++ b/src/package.json
@@ -1,34 +1,62 @@
 {
-  "name": "vite-min-template",
+  "name": "geisonbruno.github.io",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "7.11.2",
-    "@mantine/hooks": "7.11.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@mantine/carousel": "^7.8.1",
+    "@mantine/charts": "^7.8.1",
+    "@mantine/code-highlight": "^7.8.1",
+    "@mantine/core": "^7.8.1",
+    "@mantine/dates": "^7.8.1",
+    "@mantine/dropzone": "^7.8.1",
+    "@mantine/form": "^7.8.1",
+    "@mantine/hooks": "^7.8.1",
+    "@mantine/modals": "^7.8.1",
+    "@mantine/notifications": "^7.8.1",
+    "@mantine/nprogress": "^7.8.1",
+    "@mantine/spotlight": "^7.8.1",
+    "@mantine/tiptap": "^7.8.1",
+    "@tabler/icons-react": "^3.3.0",
+    "@tiptap/extension-link": "^2.3.1",
+    "@tiptap/react": "^2.3.1",
+    "@tiptap/starter-kit": "^2.3.1",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
+    "embla-carousel-react": "^8.0.2",
+    "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
+    "react-dom": "^18.2.0",
+    "react-imask": "^7.6.0",
+    "react-masked-input": "^0.3.1",
+    "react-router": "^6.23.0",
+    "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.6",
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.11.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
-    "postcss-preset-mantine": "1.17.0",
+    "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
-    "typescript": "^5.5.2",
-    "vite": "^5.3.1"
-  },
-  "packageManager": "yarn@4.3.1"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
+  }
 }
